# arcccc

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  arccc.c  arccc.cpp  read_grid.c
src/lib/: CMakeLists.txt  arccc.cpp  arccc.h  arccc_wrapper.cpp  arccc_wrapper.h  backtracking.c  backtracking.cpp  common.h  constraint.c  constraint.cpp  constraint.h  constraint_queue.h  init_vars.c  lettervar.h  read_grid.c  read_grid.cpp  read_words.c  read_words.cpp  wordvar.h
src/rust/: Cargo.toml
src/rust/src/: arcccc.rs  constraint.rs  constraint_queue.rs  dict_reader.rs  lettervar.rs  wordvar.rs
